cluster/gatekeeper-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  labels:
    gatekeeper.sh/system: "yes"
  name: gatekeeper-validating-webhook-configuration
webhooks:
  - clientConfig:
      service:
        name: gatekeeper-webhook-service
        path: /v1/admit
    failurePolicy: Ignore
    name: validation.gatekeeper.sh
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: DoesNotExist
        - key: admission.gatekeeper.sh/ignore
          operator: DoesNotExist
    sideEffects: None
    timeoutSeconds: 5
  - clientConfig:
      service:
        name: gatekeeper-webhook-service
        path: /v1/admitlabel
    failurePolicy: Fail
    name: check-ignore-label.gatekeeper.sh
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - namespaces
    sideEffects: None
    timeoutSeconds: 5
